<resources>
    <string name="about">About</string>
    <string name="about_app">About &app_name;</string>
    <string name="action_settings">Settings</string>
    <string name="add_device">Add Device</string>
    <string name="add_new_button">Add New Button</string>
    <string name="add_new_device">Add new Device</string>
    <string name="add_new_gpio_switch">Add new GPIO switch</string>
    <string name="app_name">&app_name;</string>
    <string name="apply">Apply</string>
    <string name="button_horizontal">Button Horizontal</string>
    <string name="button_prop_btn_id">buttonID</string>
    <string name="button_prop_btn_position">btnPosition</string>
    <string name="button_prop_color">color</string>
    <string name="button_prop_icon">icon</string>
    <string name="button_prop_icon_type">iconType</string>
    <string name="button_prop_ircode">irCode</string>
    <string name="button_prop_length">length</string>
    <string name="button_prop_protocol">protocol</string>
    <string name="button_prop_text">text</string>
    <string name="button_prop_text_color">textColor</string>
    <string name="button_text">Button Text</string>
    <string name="button_to_delete_remotebutton">button to delete RemoteButton</string>
    <string name="button_vertical">Button vertical</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="communicate">Communicate</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_restart">Confirm Restart</string>
    <string name="connecting">Connecting…</string>
    <string name="current_password">Current Password</string>
    <string name="current_username">Current UserName</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="delete">Delete</string>
    <string name="delete_remote">Delete Remote</string>
    <string name="description">Description</string>
    <string name="device_address">Device Address (ip:port/url)</string>
    <string name="device_name">Device Name</string>
    <string name="device_prop_description">description</string>
    <string name="device_prop_mac_address">macAddress</string>
    <string name="device_prop_nickname">nickName</string>
    <string name="device_prop_password">password</string>
    <string name="device_prop_username">userName</string>
    <string name="done">Done</string>
    <string name="edit_buttons">Edit Buttons</string>
    <string name="edit_gpio_switch">Edit GPIO Switch</string>
    <string name="edit_remote_information">Edit remote Information</string>
    <string name="enter_remote_details">Enter Remote Details</string>
    <string name="esp_command_auth">{\"request\": \"authenticate\", \"username\": \"%1$s\", \"password\": \"%2$s\"}</string>
    <string name="esp_command_change_user">{\"request\": \"set_user\", \"username\": \"%1$s\", \"password\": \"%2$s\", \"new_username\": \"%3$s\", \"new_password\": \"%4$s\"}</string>
    <string name="esp_command_change_wireless">{\"request\": \"set_wireless\", \"username\": \"%1$s\", \"password\": \"%2$s\", \"wireless_mode\": \"%3$s\", \"new_ssid\": \"%4$s\", \"new_pass\": \"%5$s\"}</string>
    <string name="esp_command_get_gpio">{\"request\": \"gpio_get\", \"username\": \"%1$s\", \"password\": \"%2$s\", \"pinNumber\": -1}</string>
    <string name="esp_command_get_wireless">{\"request\": \"get_wireless\", \"username\": \"%1$s\", \"password\": \"%2$s\"}</string>
    <string name="esp_command_ping">{\"request\": \"ping\"}</string>
    <string name="esp_command_read_ircode">{\"request\": \"ir_capture\", \"username\": \"%1$s\", \"password\": \"%2$s\", \"capture_mode\": %3$d}</string>
    <string name="esp_command_restart">{\"request\": \"restart\", \"username\": \"%1$s\", \"password\": \"%2$s\"}</string>
    <string name="esp_command_send_ircode">{\"request\": \"ir_send\", \"username\": \"%1$s\", \"password\": \"%2$s\", \"length\": \"%3$s\", \"protocol\": \"%4$s\", \"irCode\": \"%5$s\"}</string>
    <string name="esp_command_set_gpio">{\"request\": \"gpio_set\", \"username\": \"%1$s\", \"password\": \"%2$s\", \"pinMode\": \"OUTPUT\", \"pinNumber\": %3$d, \"pinValue\": %4$d}</string>
    <string name="esp_devices">ESP Devices</string>
    <string name="esp_ota_update">Esp Ota Update</string>
    <string name="esp_response">response</string>
    <string name="esp_response_mac">MAC</string>
    <string name="esp_response_pin_number">pinNumber</string>
    <string name="esp_response_pin_value">pinValue</string>
    <string name="esp_response_progress">progress</string>
    <string name="esp_response_success">success</string>
    <string name="esp_response_timeout">timeout</string>
    <string name="esp_response_value">value</string>
    <string name="exit">Exit</string>
    <string name="extension_bin">.bin</string>
    <string name="extension_hash">.hash</string>
    <string name="extension_json">.json</string>
    <string name="extension_zip">.zip</string>
    <string name="extension_apk">.apk</string>
    <string name="gpio_config_description">description</string>
    <string name="gpio_config_obj_array">GPIOObjectArray</string>
    <string name="gpio_controller">GPIO Controller</string>
    <string name="gpio_list_item_subtitle">Device: %1$s\n%2$s</string>
    <string name="gpio_obj_mac_address">macAddress</string>
    <string name="gpio_obj_pin_number">gpioNumber</string>
    <string name="gpio_obj_subtitle">subTitle</string>
    <string name="gpio_obj_title">title</string>
    <string name="home">Home</string>
    <string name="icon">Icon</string>
    <string name="img_desc_icon_device_offline">icon device offline</string>
    <string name="img_desc_icon_device_online">icon device online</string>
    <string name="img_desc_icon_for_settings_list_item">icon for settings list item</string>
    <string name="img_desc_icon_to_share_remote">icon to share remote</string>
    <string name="img_desc_icons_remote_buttons">icons for remote controller buttons</string>
    <string name="img_desc_ir_capture_error_logo">logo to display on failed to capture ir signal</string>
    <string name="img_desc_remote_controller_button">Remote controller button</string>
    <string name="import_">Import</string>
    <string name="ip_address">IP Address</string>
    <string name="ir_capture_unit">IR Capture Unit</string>
    <string name="ir_remote_controller">IR Remote Controller</string>
    <string name="ir_remotes">IR Remotes</string>
    <string name="led_switch">LED Switch</string>
    <string name="length_of_captured_ir_signal">Length of captured IR signal : %1$s pulses</string>
    <string name="libraries_used">Libraries Used</string>
    <string name="light_theme">Light Theme</string>
    <string name="loading">Loading</string>
    <string name="login">Login</string>
    <string name="login_password_hint">Password</string>
    <string name="login_uid_hint">User ID</string>
    <string name="mac_address">MAC Address</string>
    <string name="message_add_to_home_confirm">Do you want to add this button to home screen?</string>
    <string name="message_android_version_no_support">Your Android version doesn\'t support this feature</string>
    <string name="message_auth_failed_login_again">Authentication failed, please login again!</string>
    <string name="message_color_picker_help">Inner circle changes the color of content and outer two circle change button color</string>
    <string name="message_confirm_delete_note">Are you sure you want to remove the device?\nNote: All related GPIO settings will be deleted.</string>
    <string name="message_confirm_restart_note">Are you sure you want to restart the device?</string>
    <string name="message_confirm_update_device">Are you sure you want to update this device?</string>
    <string name="message_create_remote_guide">Long press buttons to drag and drop, single click to edit properties</string>
    <string name="message_delete_gpio_switch">Delete GPIO Switch %1$s ?</string>
    <string name="message_device_delete">Device successfully removed</string>
    <string name="message_device_not_connected">Device not connected, please try logging again from the app</string>
    <string name="message_device_not_selected_note">Note: Device not selected!</string>
    <string name="message_device_offline">Device not reachable</string>
    <string name="message_empty_field">Field Cannot be empty</string>
    <string name="message_empty_password">Password must contain minimum 8 characters</string>
    <string name="message_empty_ssid">SSID cannot be empty</string>
    <string name="message_err_update_file_does_not_exist">Err: Update file does not exist</string>
    <string name="message_err_update_file_is_not_valid">Err: Update file is not valid</string>
    <string name="message_esp_restart_failure">Failed to send Restart command!</string>
    <string name="message_esp_restart_success">Restart command successfully sent</string>
    <string name="message_extracting_update_file">Extracting update file…</string>
    <string name="message_gpio_device_no_selection">Please select Device</string>
    <string name="message_gpio_pin_no_selection">Please select GPIO Pin number</string>
    <string name="message_import_error">Sorry, Something went wrong and import action couldn\'t be completed</string>
    <string name="message_import_success">Import remote controller configuration successful</string>
    <string name="message_ir_cap_status_timeout">IR capture process timed out, hit retry to try again</string>
    <string name="message_ir_capture_instruction">Press the target button in the original remote control towards iR WaRE Remote…</string>
    <string name="message_launcher_no_support">Your launcher doesn\'t support this feature</string>
    <string name="message_long_press_item_edit">Long press item to edit</string>
    <string name="message_multi_capture_count">Successfully Captured %1$d Buttons.\nRetry to capture more Buttons</string>
    <string name="message_multi_capture_hint">Keep clicking buttons to capture more buttons.</string>
    <string name="message_name_field_empty">Name field cannot be empty</string>
    <string name="message_passwd_mismatch">Password mismatch</string>
    <string name="message_remote_conf_device_no_selection">Select the device to use this remote configuration.</string>
    <string name="message_waiting_ir_code">Waiting for ir signal…</string>
    <string name="message_err_failed_to_contact_device">Err: Failed to contact %1$s</string>
    <string name="message_dialog_delete_remote_button">This action can\'t be undone.\nAre you sure you want to delete this button?</string>
    <string name="message_dialog_delete_remote">This action cannot be unDone\nAre you sure you want to delete %1$s %2$s ?</string>
    <string name="model_name">Model Name:</string>
    <string name="module_name_floating_action_button">Floating Action Button</string>
    <string name="module_name_material_components_android">Material Components Android</string>
    <string name="module_name_pikolo_color_picker">Pikolo - ColorPicker</string>
    <string name="name_dir_device_config">devices</string>
    <string name="name_dir_remote_config">remotes</string>
    <string name="name_file_arp_table">ARPTable.json</string>
    <string name="name_file_dummy_json">Dummy.json</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">Wireless utilities for ESP8266 and ESP32</string>
    <string name="result_icon">Result Icon</string>
    <string name="scanning">Scanning</string>
    <string name="share">Share</string>
    <string name="skip"><![CDATA[skip>>]]></string>
    <string name="splash_logo_desc">splash screen logo</string>
    <string name="subtitle">Subtitle</string>
    <string name="title">Title</string>
</resources>