<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/home_drawer"
                android:icon="@drawable/ic_home_drawer"
                android:title="@string/home"/>
        <item
                android:id="@+id/info_drawer"
                android:icon="@drawable/ic_info_drawer"
                android:title="@string/about"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/share_drawer"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share"/>
        </menu>
    </item>

</menu>
