<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/background_circuit_square"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/margin_low"
        android:src="@drawable/circuit_light" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/margin_low"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_title_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_low"
        android:layout_marginEnd="@dimen/margin_low"
        android:layout_marginBottom="@dimen/margin_low"
        android:gravity="center_horizontal"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_subtitle_large"
        android:textStyle="bold" />

</LinearLayout>
