<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_circuit_portrait"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_view"
        android:layout_centerInParent="true"
        android:contentDescription="@string/splash_logo_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/circuit_light" />

    <LinearLayout
        android:id="@+id/login_view"
        style="@style/parent"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="75sp"
        android:layout_marginRight="25sp"
        android:layout_marginBottom="@dimen/margin_high"
        android:orientation="vertical"
        android:padding="@dimen/loginViewsMargin"
        android:visibility="gone">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="@dimen/loginViewsMargin"
            android:text="@string/login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/textFieldLayout"
            android:layout_marginTop="@dimen/margin_high"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/edit_text_uname"
                style="@style/modifiedEditText"
                android:hint="@string/login_uid_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHighlight="@color/sky_blue"
                android:textColorHint="@color/white"
                android:textColorLink="@color/sky_blue_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/textFieldLayout"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHighlight="@color/sky_blue"
                android:textColorHint="@color/white"
                android:textColorLink="@color/sky_blue_light" />

        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/skip_login"
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/skip"
            android:textColor="@color/sky_blue"
            android:textSize="@dimen/text_size_subtitle" />

    </LinearLayout>


</RelativeLayout>