<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/device_list_item_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical"
        android:visibility="visible"
        app:cardCornerRadius="@dimen/list_item_card_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/container"
            android:background="@drawable/layout_border_round_corner"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            tools:ignore="UnusedAttribute">

        <ImageView
                android:id="@+id/esp_icon"
                android:layout_width="@dimen/list_item_icon_size"
                android:layout_height="@dimen/list_item_icon_size"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_low"
                android:contentDescription="@string/esp_devices"
                android:src="@drawable/icon_esp_devices"
                app:tint="?attr/colorOnBackground" />

        <LinearLayout
                android:id="@+id/layout_vendor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/esp_icon"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap">

            <TextView
                    android:id="@+id/name_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_high"
                    android:layout_marginTop="@dimen/margin_min"
                    android:layout_marginEnd="@dimen/margin_low"
                    android:text="@string/device_name"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/mac_addr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_min"
                    android:text="@string/mac_address"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="@dimen/text_size_subtitle" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/layout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_vendor"
                android:layout_toStartOf="@id/btn_count"
                android:layout_toEndOf="@id/esp_icon"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/ip_addr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_high"
                    android:layout_marginTop="@dimen/margin_min"
                    android:layout_marginEnd="@dimen/margin_low"
                    android:text="@string/ip_address"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="@dimen/text_size_subtitle" />

        </LinearLayout>


        <TextView
                android:id="@+id/btn_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginTop="@dimen/margin_high"
                android:layout_marginEnd="@dimen/margin_high"
                android:layout_marginBottom="@dimen/margin_high"
                android:gravity="end"
                android:textColor="?attr/colorOnBackground"
                android:textSize="@dimen/text_size_title_large" />

        <TextView
                android:id="@+id/device_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_name"
                android:layout_marginStart="@dimen/margin_high"
                android:layout_marginTop="@dimen/margin_min"
                android:layout_marginBottom="@dimen/margin_low"
                android:layout_toStartOf="@id/btn_count"
                android:layout_toEndOf="@id/esp_icon"
                android:text="@string/description"
                android:textColor="?attr/colorOnBackground"
                android:textSize="@dimen/text_size_subtitle" />

        <LinearLayout
                android:layout_width="55sp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_high"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap">

            <ProgressBar
                    android:id="@+id/progress_status"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="25sp"
                    android:layout_height="25sp" />

            <ImageView
                    android:id="@+id/img_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img_desc_icon_device_online"
                    android:visibility="gone"
                    app:srcCompat="@drawable/icon_check_circle"
                    app:tint="@color/sky_blue" />

            <ImageView
                    android:id="@+id/img_offline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/img_desc_icon_device_offline"
                    android:visibility="gone"
                    app:srcCompat="@drawable/icon_cancel"
                    app:tint="@color/design_default_color_error" />

            <TextView
                    android:id="@+id/status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanning"
                    android:textSize="@dimen/text_size_micro"
                    tools:ignore="SmallSp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>

