<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/list_item_card_radius"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/layout_border_round_corner"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="@dimen/margin_low"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:id="@+id/ic_gpio_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_low"
            android:contentDescription="@string/img_desc_icon_for_settings_list_item"
            android:src="@drawable/icon_lamp"
            app:tint="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/gpio_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_low"
            android:layout_toEndOf="@id/ic_gpio_list_item"
            android:text="@string/title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/text_size_title"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/gpio_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gpio_name"
            android:layout_marginStart="@dimen/margin_low"
            android:layout_toEndOf="@id/ic_gpio_list_item"
            android:text="@string/subtitle"
            android:textSize="@dimen/text_size_subtitle" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/gpio_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_high" />

        <LinearLayout
            android:id="@+id/gpio_intermediate"
            android:layout_width="55sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_high"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="RelativeOverlap">

            <ProgressBar
                android:id="@+id/progress_status"
                style="?android:attr/progressBarStyle"
                android:layout_width="25sp"
                android:layout_height="25sp" />

            <ImageView
                android:id="@+id/img_offline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_desc_icon_device_offline"
                android:visibility="gone"
                app:srcCompat="@drawable/icon_cancel"
                app:tint="@color/design_default_color_error" />

            <TextView
                android:id="@+id/status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="@dimen/text_size_micro"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>