<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_border_round_corner"
    android:orientation="vertical"
    tools:context=".RemoteParserActivity">

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_max"
        android:drawablePadding="@dimen/margin_high"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/text_size_title_large"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/circuit_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_max"
            android:layout_marginEnd="@dimen/margin_high"
            android:text="@string/message_remote_conf_device_no_selection"
            android:textColor="?attr/colorOnBackground"
            android:textSize="@dimen/text_size_subtitle" />

        <Spinner
            android:id="@+id/select_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_max"
            android:layout_marginTop="@dimen/margin_low"
            android:layout_marginEnd="@dimen/margin_high"
            android:background="@drawable/spinner_background" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_high"
        android:layout_marginTop="@dimen/margin_max"
        android:layout_marginEnd="@dimen/margin_high"
        android:gravity="center">


        <ProgressBar
            android:id="@+id/progress_status"
            style="?android:attr/progressBarStyle"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_margin="@dimen/margin_high"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imv_status"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margin_high"
            android:contentDescription="@string/result_icon"
            android:visibility="gone"
            app:srcCompat="@drawable/icon_check_circle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_high"
        android:layout_marginTop="@dimen/margin_max"
        android:layout_marginEnd="@dimen/margin_high"
        android:layout_marginBottom="@dimen/margin_min">

        <Button
            android:id="@+id/button_import"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_low"
            android:text="@string/import_" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_high"
            android:layout_toStartOf="@id/button_import"
            android:text="@string/cancel" />
    </RelativeLayout>


</LinearLayout>